--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,9 @@
 						<objectStoreV2>true</objectStoreV2>
 						<properties>
 							<env>${cloudhubPropertyEnv}</env>
-
 							<cloudhubPropertyCryptKey>${cloudhubPropertyCryptKey}</cloudhubPropertyCryptKey>
+							<anypoint.platform.client_id>${anypoint.platform.client_id}</anypoint.platform.client_id>
+							<anypoint.platform.client_secret>${anypoint.platform.client_secret}</anypoint.platform.client_secret>
 						</properties>
 					</cloudHubDeployment>
 				</configuration>
