--- a/pom.xml
+++ b/pom.xml
@@ -43,8 +43,8 @@
 						<properties>
 							<env>${cloudhubPropertyEnv}</env>
 							<cloudhubPropertyCryptKey>${cloudhubPropertyCryptKey}</cloudhubPropertyCryptKey>
-							<anypoint.platform.client_id>${anypoint.platform.client_id}</anypoint.platform.client_id>
-							<anypoint.platform.client_secret>${anypoint.platform.client_secret}</anypoint.platform.client_secret>
+							<anypoint.platform.client_id>${client_id}</anypoint.platform.client_id>
+							<anypoint.platform.client_secret>${client_secret}</anypoint.platform.client_secret>
 						</properties>
 					</cloudHubDeployment>
 				</configuration>
