--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,42 +12,14 @@ jobs:
       logLevel: INFO
     steps:
       – checkout
-      – run: mvn –s settings.xml deploy -Denv=dev -DcloudhubPropertyCryptKey=${cloudhubPropertyCryptKey} -DmuleDeploy      
+      – run: 
+	      name: Deploy to dev
+          command: mvn –s settings.xml deploy -Denv=dev -DcloudhubPropertyCryptKey=${cloudhubPropertyCryptKey} -DmuleDeploy      
 	  – save_cache:
 		  paths:
 		    – ~/.m2
 	      key: mvn-cache-circle-ci-mulesoft-poc-dev
-		  
-  deploy-qa:
-    docker:
-      – image: circleci/openjdk:8-jdk
-    working_directory: ~/repo    
-    environment:
-      cloudhubPropertyEnv: qa
-      cloudhubWorkerType: Small
-      cloudhubEnvironment: qa
-      cloudhubApplicationName: circle-ci-mulesoft-poc-qa
-    steps:
-      – checkout
-      – run: mvn –s settings.xml deploy -Denv=qa -DskipTests -DmuleDeploy
-	  
-  deploy-prod:
-    docker:
-      – image: circleci/openjdk:8-jdk
-    working_directory: ~/repo    
-    environment:
-      cloudhubPropertyEnv: prod
-      cloudhubWorkerType: Small
-      cloudhubEnvironment: prod
-      cloudhubApplicationName:  circle-ci-mulesoft-poc-prod
-      MAVEN_OPTS: -Xmx3200m
-      cloudhubPassword: ${cloudhubProdPassword}
-      cloudhubUser: ${cloudhubProdUser} 
-    steps:
-      – checkout  
-      – run: mvn –s settings.xml deploy -Denv=prod -DskipTests -DmuleDeploy
-      – store_artifacts:
-          path: targetworkflows:
+
 
 workflows:
 	version: 2  
@@ -57,15 +29,3 @@ workflows:
 			  filters:
 				branches:
 				  only: develop
-	deploy-qa:
-		jobs:
-		  – deploy-qa:
-			  filters: 
-			    branches:
-				  only: qa
-    deploy-prod:
-		jobs:
-		  – deploy-prod:
-			  filters:
-				branches:
-				  only: main
