modified pom.xml config.ymal

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
     environment:
       cloudhubPropertyEnv: dev
       cloudhubWorkerType: MICRO
-      cloudhubEnvironment: dev
+      cloudhubEnvironment: Sandbox
       cloudhubApplicationName: circle-ci-mulesoft-poc-dev
       logLevel: INFO
     steps:
